# cfhe

./: .gitignore  CMakeLists.txt  README.md
benchmarking/: invoke_cfhe.py
compareDecimal/: cf_1_EQ.cpp  cf_1_GT.cpp  cf_2_EQ.cpp  cf_2_GT.cpp  cf_3_EQ.cpp  cf_3_GT.cpp  decimal_1_EQ.cpp  decimal_1_GT.cpp  decimal_2_EQ.cpp  decimal_2_GT.cpp  decimal_3_EQ.cpp  decimal_3_GT.cpp
include/: EncryptedData.h  EncryptedDatabase.h  arithmetic.h  comparison.h  generalTools.h  generateMsg.h  gosper.h  queries.h  sorting.h  utilities.h
lib/: CMakeLists.txt
src/: arithmetic.cpp  comparison.cpp  generalTools.cpp  generateMsg.cpp  gosper.cpp  queries.cpp  sorting.cpp  utilities.cpp
test/: addTest.cpp  arithmeticTest.cpp  cfTest.cpp  compTest.cpp  compareDecimal.cpp  comparisonCompare.cpp  decimalTest.cpp  divTest.cpp  equalCompare.cpp  equalTest.cpp  integerCompTest.cpp  integerEqualTest.cpp  mulTreeTest.cpp  pdqTest.cpp  realCompTest.cpp  realEqualTest.cpp  ref_CompTest.cpp  ref_EqualTest.cpp  sortTest.cpp  sortingTest.cpp  subTest.cpp  test.cpp
